@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-04-16T08:31:05Z",
-  "count" : 7,
-  "count_minmax" : [ 0, 7 ],
-  "count_prev_day_inc" : 11,
+  "timestamp" : "2022-04-16T16:08:20Z",
+  "count" : 16,
+  "count_minmax" : [ 0, 16 ],
+  "count_prev_day_inc" : 20,
   "count_prev_day_dec" : 0,
-  "uniques" : 1,
-  "uniques_minmax" : [ 0, 1 ],
-  "uniques_prev_day_inc" : 2,
+  "uniques" : 2,
+  "uniques_minmax" : [ 0, 2 ],
+  "uniques_prev_day_inc" : 3,
   "uniques_prev_day_dec" : 0
 }
