@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-16T08:31:05Z",
+  "timestamp" : "2022-04-16T16:08:20Z",
   "count_outdated" : 0,
   "uniques_outdated" : 0,
-  "count" : 11,
-  "uniques" : 2,
+  "count" : 20,
+  "uniques" : 3,
   "views" : [
     {
       "timestamp": "2022-04-15T00:00:00Z",
@@ -14,10 +14,10 @@
     },
     {
       "timestamp": "2022-04-16T00:00:00Z",
-      "count": 7,
-      "count_minmax": [ 0, 7 ],
-      "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
+      "count": 16,
+      "count_minmax": [ 0, 16 ],
+      "uniques": 2,
+      "uniques_minmax": [ 0, 2 ]
     }
   ]
 }
