@@ -1,6 +1,6 @@
 {
-  "count": 11,
-  "uniques": 1,
+  "count": 20,
+  "uniques": 2,
   "views": [
     {
       "timestamp": "2022-04-15T00:00:00Z",
@@ -9,8 +9,8 @@
     },
     {
       "timestamp": "2022-04-16T00:00:00Z",
-      "count": 7,
-      "uniques": 1
+      "count": 16,
+      "uniques": 2
     }
   ]
 }
